# escola-api

./: .gitignore  README.md  db_seed.sql  pyproject.toml  setup.ps1
src/escola_api/: cadastro.html  calculadora.html  dependencias.py  main.py
src/escola_api/api/v1/: aluno_controller.py  curso_controller.py  formacao_controller.py  matricula_controller.py  professor_controller.py
src/escola_api/database/: banco_dados.py  modelos.py
src/escola_api/schemas/: aluno_schema.py  curso_schemas.py  formacao_schema.py  matricula_schema.py  professor_schema.py
