[project]
name = "escola-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Johannes David Weidner",email = "thomas.jdweidner@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.6,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
packages = [{include = "escola_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
