[project]
name = "escola-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco Lucas Janesch Lange Sens",email = "franciscosensaulas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]
packages = [{include = "escola_api", from = "src"}]
# poetry lock
# poetry add dataclasses-json

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
